# fastapi-student-crud

./: README.md  pyproject.toml
student/: main.py
